 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 5
============

* [cdunde/DanielPharos]: Setup displaying of 'Used Textures' in current map being edited in the Texture Browser.

* [cdunde]: Setup of a full beizer library with over 30 prefab beizers to work with for games that can use beziers.

* [cdunde]: Fixed a bug with the opening the Texture Browser window icon button.

* [cdunde]: Added Special entity cv.canvas() line drawing for Shine engine, may also be useful for other games.

6.5.0 Beta 4
============

* [cdunde/DanielPharos]: Added new Templates functions and Templates. This is a very powerful new element
          - with a whole array of capabilities. See the entire section in the Infobase Docs on Templates,
          - which is also linked to new functions in the editor. Developed by our friends in Russia,
          - the Shine team, Nazar and vodkins. Adapted to all QuArK supported games by cdunde and DanielPharos.

* [DanielPharos]: Made a rudimentary, but functional MD3 file saving code. You can now save MD3 models!

* [DanielPharos]: Made an option to set the amount of lines of text in the console.

* [DanielPharos]: Fixed the duplicators to export correctly again and the map portals not drawing anymore.

* [cdunde]: Added many new beizer shapes and functions developed by our friends in Russia,
          - the Shine team, Nazar and vodkins.

* [DanielPharos]: Updated the miter edge function with some error messages, fixed a division
          - by 0 in it, and made the option disable correctly. Also, added some InfoBase
          - documentation about it.

* [cdunde/DanielPharos]: Added two new function methods to Subdivide selected faces