@@ -23,9 +23,11 @@ http://www.planetquake.com/quark - Contact information in AUTHORS.TXT
 $Header$
  ----------- REVISION HISTORY ------------
 $Log$
+Revision 1.2  2007/11/21 18:19:50  danielpharos
+Fix a problem downloading files in the AutoUpdater, and disabled it and hidden it per default (since it's not yet functional).
+
 Revision 1.1  2007/09/12 15:35:40  danielpharos
 Moved update settings to seperate config section and added beginnings of online update check.
-
 
 }
 
@@ -33,9 +35,20 @@ unit AutoUpdater;
 
 interface
 
-uses Windows, Classes;
+uses Windows, Classes, Forms, StdCtrls, Controls, Graphics, CheckLst;
 
- {------------------------}
+type
+  TAutoUpdater = class(TForm)
+    GroupBox1: TGroupBox;
+    Label1: TLabel;
+    OKBtn: TButton;
+    CancelBtn: TButton;
+    CheckListBox1: TCheckListBox;
+    procedure CancelBtnClick(Sender: TObject);
+    procedure OKBtnClick(Sender: TObject);
+    procedure CheckListBox1Click(Sender: TObject);
+    procedure FormCreate(Sender: TObject);
+  end;
 
 function AutoUpdate: Boolean;
 
@@ -43,7 +56,195 @@ function AutoUpdate: Boolean;
 
 implementation
 
-uses WinInet, StrUtils, SysUtils, QkObjects;
+uses WinInet, StrUtils, SysUtils, QkObjects, Setup;
+type
+  TUpdatePackage = record
+    Name: String;
+    Date: String; //@ Make this an integer: Days after ... Like offline update!
+    Description: String;
+    Version: String; //@
+    Priority: Integer;
+    QUPfilename: String;
+    Dependencies: String;
+  end;
+
+var
+  UpdatePackages: array of TUpdatePackage;
+  UpdatePackagesNR: Integer;
+
+//Update priorities
+const
+  upCritical  = 0;
+  upImportant = 1;
+  upOptional  = 2;
+  upBeta      = 3;
+  upMax       = 3; //The higher priority number possible
+
+{$R *.DFM}
+
+ {------------------------}
+
+function GetLine(IndexFile: PChar; IndexFileSize: Cardinal; var CurrentIndex: Cardinal; var OutputLine: String) : Boolean;
+var
+  Dest: PChar;
+begin
+  Dest:=IndexFile+CurrentIndex;
+  OutputLine:='';
+  if (CurrentIndex>=IndexFileSize) then
+  begin
+    Result:=false;
+    Exit;
+  end;
+  while ((Dest^<>#13) and (Dest^<>#10)) do
+  begin
+    OutputLine:=OutputLine+Dest^;  //@This is NOT the best way...!
+    Inc(Dest);
+    CurrentIndex:=CurrentIndex+1;
+    if (CurrentIndex=IndexFileSize) then
+    begin
+      Result:=true;
+      Exit;
+    end;
+  end;
+  if ((Dest^=#13) and (CurrentIndex<IndexFileSize)) then
+  begin
+    Inc(Dest);
+    if (Dest^=#10) then
+      CurrentIndex:=CurrentIndex+1;
+  end;
+  if (CurrentIndex<IndexFileSize) then
+    CurrentIndex:=CurrentIndex+1;
+  Result:=true;
+end;
+
+function ParseIndexFile(IndexFile: PChar; IndexFileSize: Cardinal) : Boolean;
+var
+  Dest, OldDest: PChar;
+  ParseLine: String;
+  ParsePos: Cardinal;
+  I: Integer;
+begin
+  Dest:=IndexFile;
+  OldDest:=Dest;
+  ParsePos:=0;
+
+  if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+  begin
+    MessageBox(0, PChar('Unable to parse header online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  if ParseLine<>'QuArK Update Index v1' then
+  begin
+    MessageBox(0, PChar('Header online update file not recognized. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+  begin
+    MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  //@Make more clear error messages! Store important data in LOG too!
+
+  if TryStrToInt(ParseLine, UpdatePackagesNR) = false then
+  begin
+    MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  if UpdatePackagesNR<0 then
+  begin
+    MessageBox(0, PChar('Invalid number of update packages. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  if UpdatePackagesNR>0 then
+  begin
+    SetLength(UpdatePackages, UpdatePackagesNR);
+    for I:=0 to UpdatePackagesNR-1 do
+    begin
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].Name:=ParseLine;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].Date:=ParseLine;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].Description:=ParseLine;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].Version:=ParseLine;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      if TryStrToInt(ParseLine, UpdatePackages[I].Priority) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      if (UpdatePackages[I].Priority < 0) or (UpdatePackages[I].Priority > upMax) then
+      begin
+        //@
+        Result:=false;
+        Exit;
+      end;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].QUPfilename:=ParseLine;
+
+      if GetLine(IndexFile, IndexFileSize, ParsePos, ParseLine) = false then
+      begin
+        MessageBox(0, PChar('Unable to parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+        Result:=false;
+        Exit;
+      end;
+      UpdatePackages[I].Dependencies:=ParseLine;
+    end;
+  end;
+
+  //@
+
+//    MessageBox(0, PChar('Can not parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+
+  Result:=true;
+end;
 
 function AutoUpdate: Boolean;
 var
@@ -52,12 +253,13 @@ var
   StatusBuffer: PChar;
   cStatusBufferLength, StatusBufferLength: DWORD;
   HeaderIndex: DWORD;
-  ResourceBuffer, Dest, OldDest: PChar;
-  ResourceSize: Integer;
+  ResourceBuffer, Dest: PChar;
+  ResourceSize: Cardinal;
   Buffer: PChar;
   cBufferLength, BufferLength, ReadBufferLength: DWORD;
-  IndexParse: String;
-  ParsePos: Integer;
+  Setup: QObject;
+  UpdateWindow: TAutoUpdater;
+  I: Integer;
 
   function GetIntInfo(Flag: DWORD; Default: Integer = 0): Integer;
   begin
@@ -79,6 +281,8 @@ var
   end;
 
 begin
+  Result:=true;
+  
   InetHandle:=InternetOpen(PChar('QuArK'), INTERNET_OPEN_TYPE_PRECONFIG, nil, nil, 0);
   if InetHandle=nil then
   begin
@@ -86,32 +290,29 @@ begin
     Result:=false;
     Exit;
   end;
+  try
 
   InetConnection:=InternetConnect(InetHandle, PChar(QuArKUpdateSite), INTERNET_DEFAULT_HTTP_PORT, nil, nil, INTERNET_SERVICE_HTTP, 0, 0);
   if InetConnection=nil then
   begin
-    InternetCloseHandle(InetHandle);
     MessageBox(0, PChar('Unable to open internet connection. Online update failed.'), PChar('QuArK'), MB_OK);
     Result:=false;
     Exit;
   end;
+  try
 
   //We might need to set this as accepted type: 'binary/octet-stream'
   InetResource:=HttpOpenRequest(InetConnection, PChar('GET'), PChar(QuArKUpdateFile), nil, nil, nil, INTERNET_FLAG_RELOAD + INTERNET_FLAG_NO_CACHE_WRITE, 0);
   if InetResource=nil then
   begin
-    InternetCloseHandle(InetConnection);
-    InternetCloseHandle(InetHandle);
     MessageBox(0, PChar('Can not find online update file. Online update failed.'), PChar('QuArK'), MB_OK);
     Result:=false;
     Exit;
   end;
+  try
 
   if HttpSendRequest(InetResource, nil, 0, nil, 0)=false then
   begin
-    InternetCloseHandle(InetResource);
-    InternetCloseHandle(InetConnection);
-    InternetCloseHandle(InetHandle);
     MessageBox(0, PChar('Can not find online update file. Online update failed.'), PChar('QuArK'), MB_OK);
     Result:=false;
     Exit;
@@ -120,49 +321,51 @@ begin
   try
     StatusValue:=GetIntInfo(HTTP_QUERY_STATUS_CODE, 200);
   except
-    InternetCloseHandle(InetResource);
-    InternetCloseHandle(InetConnection);
-    InternetCloseHandle(InetHandle);
     MessageBox(0, PChar('Can not find online update file. Online update failed.'), PChar('QuArK'), MB_OK);
     Result:=false;
     Exit;
   end;
 
-  if StatusValue=200 then
+  if StatusValue<>200 then
   begin
-    //Retrieve the index-filesize...
+    //@Proces StatusValue!
+    MessageBox(0, PChar('Can not find online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  //Retrieve the index-filesize...
+  try
+    ResourceSize:=GetIntInfo(HTTP_QUERY_CONTENT_LENGTH, 0);
+  except
+    MessageBox(0, PChar('Can not retrieve size of online update file. Online update failed.'), PChar('QuArK'), MB_OK);
+    Result:=false;
+    Exit;
+  end;
+
+  if ResourceSize=0 then
+  begin
+    //@
+    Result:=false;
+    Exit;
+  end;
+
+  //We can use this to start reading with an offset, if ever needed...
+  //InternetSetFilePointer
+
+  GetMem(ResourceBuffer, ResourceSize);
+  try
+    Dest:=ResourceBuffer;
+
+    cBufferLength:=65536;
+    BufferLength:=cBufferLength;
+    if Int(BufferLength)>ResourceSize then
+      BufferLength:=ResourceSize;
+    GetMem(Buffer, BufferLength);
     try
-      ResourceSize:=GetIntInfo(HTTP_QUERY_CONTENT_LENGTH, 0);
-    except
-      InternetCloseHandle(InetResource);
-      InternetCloseHandle(InetConnection);
-      InternetCloseHandle(InetHandle);
-      MessageBox(0, PChar('Can not retrieve size of online update file. Online update failed.'), PChar('QuArK'), MB_OK);
-      Result:=false;
-      Exit;
-    end;
-
-    if ResourceSize>0 then
-    begin
-      //We can use this to start reading with an offset, if ever needed...
-      //InternetSetFilePointer
-
-      GetMem(ResourceBuffer, ResourceSize);
-      Dest:=ResourceBuffer;
-
-      cBufferLength:=65536;
-      BufferLength:=cBufferLength;
-      if Int(BufferLength)>ResourceSize then
-        BufferLength:=ResourceSize;
-      GetMem(Buffer, BufferLength);
       repeat
         if InternetReadFile(InetResource, Buffer, BufferLength, ReadBufferLength)=false then
         begin
-          FreeMem(Buffer);
-          FreeMem(ResourceBuffer);
-          InternetCloseHandle(InetResource);
-          InternetCloseHandle(InetConnection);
-          InternetCloseHandle(InetHandle);
           MessageBox(0, PChar('Can not download online update file. Online update failed.'), PChar('QuArK'), MB_OK);
           Result:=false;
           Exit;
@@ -173,114 +376,123 @@ begin
           Inc(Dest, ReadBufferLength);
         end;
       until ReadBufferLength=0;
+    finally
       FreeMem(Buffer);
-
-      Dest:=ResourceBuffer;
-      OldDest:=Dest;
-      ParsePos:=1;
-      IndexParse:='';
-      while ((Char(Dest^)<>#13) and (Char(Dest^)<>#10)) do
-      begin
-        if ParsePos=ResourceSize-1 then
-        begin
-          Dest:=nil;
-          OldDest:=nil;
-          FreeMem(ResourceBuffer);
-          InternetCloseHandle(InetResource);
-          InternetCloseHandle(InetConnection);
-          InternetCloseHandle(InetHandle);
-          MessageBox(0, PChar('Can not parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
-          Result:=false;
-          Exit;
-        end
-        else
-        begin
-          IndexParse:=IndexParse+Char(Dest^);  //This is NOT the best way...!
-          Inc(Dest);
-          ParsePos:=ParsePos+1;
-        end;
-      end;
-      if IndexParse<>'QuArK Update Index v1' then
-      begin
-        Dest:=nil;
-        OldDest:=nil;
-        FreeMem(ResourceBuffer);
-        InternetCloseHandle(InetResource);
-        InternetCloseHandle(InetConnection);
-        InternetCloseHandle(InetHandle);
-        MessageBox(0, PChar('Header online update file not recognized. Online update failed.'), PChar('QuArK'), MB_OK);
-        Result:=false;
-        Exit;
-      end;
-
-      if (Char(Dest^))=#13 then
-      begin
-        Inc(Dest);
-        ParsePos:=ParsePos+1;
-        if (Char(Dest^))=#10 then
-        begin
-          Inc(Dest);
-          ParsePos:=ParsePos+1;
-        end
-      end
-      else
-      begin
-        Inc(Dest);
-        ParsePos:=ParsePos+1;
-      end;
-      if ParsePos>=ResourceSize-1 then
-      begin
-        Dest:=nil;
-        OldDest:=nil;
-        FreeMem(ResourceBuffer);
-        InternetCloseHandle(InetResource);
-        InternetCloseHandle(InetConnection);
-        InternetCloseHandle(InetHandle);
-        MessageBox(0, PChar('Can not parse online update file. Online update failed.'), PChar('QuArK'), MB_OK);
-        Result:=false;
-        Exit;
-      end;
-      OldDest:=Dest;
-
-      //Parse next line...!
-
-      Dest:=nil;
-      OldDest:=nil;
-      FreeMem(ResourceBuffer);
     end;
-  end
-  else
-  begin
-    //@Proces StatusValue!
-    InternetCloseHandle(InetResource);
-    InternetCloseHandle(InetConnection);
-    InternetCloseHandle(InetHandle);
-    MessageBox(0, PChar('Can not find online update file. Online update failed.'), PChar('QuArK'), MB_OK);
-    Result:=false;
-    Exit;
+
+    if ParseIndexFile(ResourceBuffer, ResourceSize) = false then
+    begin
+      //@
+      Result:=false;
+      Exit;
+    end;
+  finally
+    FreeMem(ResourceBuffer);
   end;
 
+  //@
+  Setup:=SetupSubSet(ssGeneral, 'Update');
+  if Setup.Specifics.Values['AutomaticInstall']='' then
+  begin
+    UpdateWindow:=TAutoUpdater.Create(nil);
+    try
+      for I:=0 to UpdatePackagesNR-1 do
+        with UpdateWindow.CheckListBox1 do
+        begin
+          AddItem(UpdatePackages[I].Name, nil);
+          case UpdatePackages[I].Priority of
+          upCritical:  Checked[I]:=true;
+          upImportant: Checked[I]:=true;
+          upOptional:  Checked[I]:=false;
+          upBeta:      Checked[I]:=false;
+          else
+          begin
+            //Shouldn't happen!
+            //@
+            Checked[I]:=false;
+          end;
+          end;
+        end;
+      UpdateWindow.ShowModal;
+      //@
+    finally
+      UpdateWindow.Free;
+    end;
+  end;
+
+  //@
+
+  finally
   if InternetCloseHandle(InetResource)=false then
   begin
     //This is not really a critical error, so let's ignore it...
     {Result:=true;
     Exit;}
   end;
+  end;
 
+  finally
   if InternetCloseHandle(InetConnection)=false then
   begin
     //This is not really a critical error, so let's ignore it...
     {Result:=true;
     Exit;}
   end;
+  end;
 
+  finally
   if InternetCloseHandle(InetHandle)=false then
   begin
     //This is not really a critical error, so let's ignore it...
     {Result:=true;
     Exit;}
   end;
-  Result:=true;
+  end;
 end;
 
+procedure TAutoUpdater.CancelBtnClick(Sender: TObject);
+begin
+  Close;
+end;
+
+procedure TAutoUpdater.OKBtnClick(Sender: TObject);
+begin
+  //@
+end;
+
+procedure TAutoUpdater.CheckListBox1Click(Sender: TObject);
+var
+  I: Integer;
+  S: String;
+begin
+  I:=(Sender as TCheckListBox).ItemIndex;
+  if I=-1 then
+  begin
+    Label1.Caption:='Description';
+    Label1.Font.Color:=clGrayText;
+  end
+  else
+  begin
+    case UpdatePackages[I].Priority of
+    upCritical: S:='Priority: Critical';
+    upImportant: S:='Priority: Important';
+    upOptional: S:='Priority: Optional';
+    upBeta: S:='Priority: Beta';
+    else
+      S:=''; //Shouldn't happen!
+    end;
+    Label1.Caption:=S + #13 + #10 + UpdatePackages[I].Description;
+    Label1.Font.Color:=clWindowText;
+  end;
+end;
+
+procedure TAutoUpdater.FormCreate(Sender: TObject);
+begin
+  CheckListBox1Click(CheckListBox1);
+end;
+
+initialization
+
+finalization
+  SetLength(UpdatePackages, 0); //@Do this earlier!
 end.
